--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <!--Let browser know website is optimized for mobile-->
 </head>
 <body>
+<p>Can'Harder</p>
+<!-- Modal Trigger -->
+
+
+<!-- Modal Structure -->
 
 <!--Jeffen-->
 
