--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body>
+   <a target="_blank" href="https://www.youtube.com/watch?v=GYB-I353Z0c">Can'Harder !</a> 
 <script src="./assets/js/script.js"></script>
 
 </body>
